--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
         <script type="text/template" id="provider-view-csss">
        <div class="row-fluid spacer">
             <div class="span12" style=""><h1><%= firstName%> <%= lastName%></h1></div>
+            <button class="btn btn-primary btn-small js-home" >
+          <i class="icon-home"></i>
+          Home
+        </button>
           </div>  
           <div class="row-fluid spacer">
             <div class="span4" id="imageHolder" style="border: 1px solid blue">
@@ -120,10 +124,27 @@
                   </div>
                 </div>
             </div><!-- span6 -->
-            <div class="span2"></div>
+            </div><!-row-fluid -->
+            <div class="clearfix">
+            </div>
+            <div class="control-group spacer">
+           <div class="span5" style="border:1px solid orange">Skills section needs to be implemented.</div>
+           </div>
+           <div class="row-fluid spacer">
+            <div class="span12" style="border:solid 1px green">Review section found here.</div>
+           </div>
             </div><!-- span8 -->
             </div><!-- row-fluid-spacer -->
+
 </script>
+
+<script type="text/template" id="missing-contact-view">
+ <div class="alert alert-error">This contact doesn't exist !</div>
+ <button class="btn btn-primary btn-small js-home" >
+          <i class="icon-home"></i>
+          Home
+        </button>
+ </script>
 
       <!-- TEMPLATES END-->
       <!-- SCRIPTS -->
@@ -131,7 +152,6 @@
       <script src="./assets/js/vendor/json2.js"></script>
       <script src="./assets/js/vendor/underscore.js"></script>
       <script src="./assets/js/vendor/backbone.js"></script>
-      <script src="./assets/js/vendor/backbone.localstorage.js"></script>
       <script src="./assets/js/vendor/backbone.marionette.js"></script>
       <script type="text/javascript" src="./assets/js/app.js"></script>
       <script type="text/javascript" src="./assets/js/entities/providers.js"></script>
@@ -143,8 +163,6 @@
       <!--SCRIPTS END -->
 
       <script type="text/javascript">
-      
-
       ServiceManager.start();
       </script>
 
