--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Service.ly</title>
     <link href="./assets/css/bootstrap.css" rel="stylesheet">
     <link href="./assets/css/application.css" rel="stylesheet">
+    <link href="./assets/css/jquery-ui-1.10.3.custom.css" rel="stylesheet">
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -91,6 +92,10 @@
           <i class="icon-home"></i>
           Home
         </button>
+        <a href="#providers/<%= id %>/edit" class="btn btn-primary btn-small js-edit">
+        <i class="icon-pencil"></i>
+        Edit this contact
+        </a>
           </div>  
           <div class="row-fluid spacer">
             <div class="span4" id="imageHolder" style="border: 1px solid blue">
@@ -139,27 +144,69 @@
 </script>
 
 <script type="text/template" id="missing-contact-view">
- <div class="alert alert-error">This contact doesn't exist !</div>
+ <div class="alert alert-error">This contact does not exist !</div>
  <button class="btn btn-primary btn-small js-home" >
           <i class="icon-home"></i>
           Home
         </button>
  </script>
+ <script type="text/template" id="loading-view">
+ <h1>Loading Data..</h1>
+ <div id="spinner"></div>
+ </script>
+ <script type="text/template" id="provider-form">
+ <h1>Edit <%= firstName %> <%= lastName %></h1>
+ <form>
+ <div class="row-fluid spacer">
+ <div class="span4">
+  <img src="<%= imagePath %>"/>
+ </div>
+ <div class="span8">
+  <div class="control-group">
+    <label for="provider-firstName" class="control-label">
+      First Name:</label>
+      <input id="provider-firstName" name="firstName" type="text" value="<%= firstName %>"/>
+  </div>
+  <div class="control-group">
+    <label for="provider-lastName" class="control-label">Last Name:</label>
+    <input id="provider-lastName" name="lastName" type="text" value="<%= lastName %>"/>
+  </div>
+  <div class="control-group">
+  <label for="provider-phoneNumber" class="control-label">Phone number:</label>
+  <input id="provider-phoneNumber" name="phoneNumber" type="text" value="<%= phoneNumber%>"/>
+  </div><!-- end of control-group-->
+  </div><!-- end of span6 -->
+  </div><!-- end of row fluid -->
+  <button class="btn js-submit">Save</button>
+ </form>
+ </script>
 
       <!-- TEMPLATES END-->
       <!-- SCRIPTS -->
       <script src="./assets/js/vendor/jquery.js"></script>
+      <script src="./assets/js/vendor/jquery-ui-1.10.3.js"></script>
       <script src="./assets/js/vendor/json2.js"></script>
       <script src="./assets/js/vendor/underscore.js"></script>
       <script src="./assets/js/vendor/backbone.js"></script>
+      <script src="./assets/js/vendor/backbone.syphon.js"></script>
+      <script src="./assets/js/vendor/backbone.localstorage.js"></script>
       <script src="./assets/js/vendor/backbone.marionette.js"></script>
+       <script type=" text/javascript" src="./assets/js/vendor/spin.js"></script>
+      <script type="text/javascript" src="./assets/js/vendor/spin.jquery.js"></script>
+      
+
       <script type="text/javascript" src="./assets/js/app.js"></script>
+      <script type="text/javascript" src="./assets/js/apps/config/storage/localstorage.js"></script>
+      <script src="./assets/js/common/views.js"></script>
       <script type="text/javascript" src="./assets/js/entities/providers.js"></script>
+      <script type="text/javascript" src="./assets/js/common/views.js"></script>
       <script type="text/javascript" src="./assets/js/apps/providers/providers_app.js"></script>
       <script type="text/javascript" src="./assets/js/apps/providers/list/list_view.js"></script>
       <script type="text/javascript" src="./assets/js/apps/providers/list/list_controller.js"></script>
       <script type="text/javascript" src="./assets/js/apps/providers/show/show_view.js"></script>
       <script type="text/javascript" src="./assets/js/apps/providers/show/show_controller.js"></script>
+      <script type="text/javascript" src="./assets/js/apps/providers/edit/edit_view.js"></script>
+      <script type="text/javascript" src="./assets/js/apps/providers/edit/edit_controller.js"></script>
       <!--SCRIPTS END -->
 
       <script type="text/javascript">
